--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="aciklama">News Haber Ajansı,2000 yılından beri, doğru ve tarafsız haberin tek adresi.sizler için haberin kaynağına ulaşıyor,tarafsız haberleri tarafınıza özenle sunuyoruz. </string>
     <string name="open">1</string>
     <string name="close">0</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
